--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.setting.SettingFragment"
-    android:background="@color/black"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical">
 
    <LinearLayout
@@ -39,11 +39,12 @@
           android:layout_height="wrap_content"
           android:text="edit information"
           android:textSize="12sp"
-          android:textColor="#fff"
+          android:textColor="@color/black"
           android:layout_marginTop="15dp"
           android:textAlignment="textStart"
           android:drawableLeft="@drawable/icons8_user_35"
-          android:backgroundTint="@color/black"/>
+          android:backgroundTint="#00000000"
+          style="?android:attr/borderlessButtonStyle"/>
 
       <Button
           android:id="@+id/logout"
@@ -52,10 +53,11 @@
           android:drawableLeft="@drawable/icons8_sign_out_35"
           android:textAlignment="textStart"
           android:text="Log Out"
-          android:textColor="#fff"
+          android:textColor="@color/black"
           android:textSize="12dp"
-          android:backgroundTint="@color/black"
-          android:layout_marginTop="7dp"/>
+          android:backgroundTint="#00000000"
+          android:layout_marginTop="7dp"
+          style="?android:attr/borderlessButtonStyle"/>
 
    </LinearLayout>
 
