update edit User activity

--- a/app/src/main/res/layout/activity_edit_info_user.xml
+++ b/app/src/main/res/layout/activity_edit_info_user.xml
@@ -10,6 +10,13 @@
         android:background="@drawable/background_gradient"
         tools:context=".activity.editinfouser.EditInfoUserActivity">
 
+        <Button
+            android:id="@+id/backtomainactivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:text="BACK"
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="match_parent"
