--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -39,12 +39,16 @@
           android:layout_height="wrap_content"
           android:text="edit information"
           android:textSize="12sp"
-          android:textColor="@color/black"
-          android:layout_marginTop="15dp"
+          android:textColor="#fff"
           android:textAlignment="textStart"
+          android:layout_marginEnd="80sp"
+          android:layout_marginStart="80sp"
+          android:layout_marginTop="15dp"
+
           android:drawableLeft="@drawable/icons8_user_35"
-          android:backgroundTint="#00000000"
-          style="?android:attr/borderlessButtonStyle"/>
+          android:background="@drawable/border"
+          style="?android:attr/borderlessButtonStyle"
+          tools:ignore="RtlCompat" />
 
       <Button
           android:id="@+id/logout"
@@ -53,9 +57,12 @@
           android:drawableLeft="@drawable/icons8_sign_out_35"
           android:textAlignment="textStart"
           android:text="Log Out"
-          android:textColor="@color/black"
+          android:textColor="#fff"
           android:textSize="12dp"
           android:backgroundTint="#00000000"
+          android:layout_marginEnd="80sp"
+          android:layout_marginStart="80sp"
+          android:background="@drawable/border"
           android:layout_marginTop="7dp"
           style="?android:attr/borderlessButtonStyle"/>
 
