--- a/app/src/main/res/layout/activity_edit_info_user.xml
+++ b/app/src/main/res/layout/activity_edit_info_user.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_gradient"
@@ -19,33 +19,30 @@
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/txtview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/backtomainactivity"
+            android:layout_marginStart="70sp"
+            android:layout_marginTop="25sp"
+            android:layout_marginEnd="70sp"
+            android:layout_marginBottom="30sp"
+            android:background="@drawable/border"
+            android:gravity="center"
+            android:paddingTop="20sp"
+            android:paddingBottom="20sp"
             android:text="Edit Your Infomation"
             android:textColor="#fff"
-            android:textSize="20sp"
-            android:layout_above="@+id/EditInfo_linear"
-            android:layout_marginBottom="30sp"
-            android:gravity="center"/>
+            android:textSize="20sp" />
+
         <LinearLayout
             android:id="@+id/EditInfo_linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerInParent="true">
-
-            <EditText
-                android:id="@+id/edt_EditInfo_fullname"
-                android:layout_width="240sp"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:background="#fff"
-                android:textColor="#000"
-                android:textSize="14sp"
-                android:hint="Your name"
-                android:maxLines="1"
-                android:drawableLeft="@drawable/icons8_user_35"
-                android:layout_gravity="center_horizontal" />
+            android:layout_below="@+id/txtview1"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="-20sp"
+            android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/edt_EditInfo_img"
@@ -54,18 +51,33 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15sp"
                 android:src="@drawable/logo"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#fff"/>
+                app:civ_border_color="#fff"
+                app:civ_border_width="2dp" />
+
+            <EditText
+                android:id="@+id/edt_EditInfo_fullname"
+                android:layout_width="240sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30sp"
+                android:background="#fff"
+                android:drawableLeft="@drawable/icons8_user_35"
+                android:hint="Your name"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textColor="#000"
+                android:textSize="14sp" />
+
 
             <Button
                 android:id="@+id/edt_EditInfo_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Submit"
                 android:layout_gravity="center"
-                android:textSize="14sp"
-                android:layout_marginTop="8sp"
-                android:backgroundTint="#000"/>
+                android:layout_marginTop="20sp"
+                android:background="@drawable/border"
+                android:text="Submit"
+                android:textSize="14sp" />
         </LinearLayout>
 
     </RelativeLayout>
