--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/background_gradient"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/forgotpass_btnback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BACK"
+            android:layout_marginStart="10sp"
+            android:background="@drawable/border"
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -32,7 +42,6 @@
                 android:id="@+id/loginLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="25dp">
@@ -64,6 +73,7 @@
                     android:id="@+id/btnSend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/border"
                     android:text="Send" />
 
             </LinearLayout>
