--- a/app/src/main/res/drawable/switch_trcks.xml
+++ b/app/src/main/res/drawable/switch_trcks.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F18A69"/>
-    <corners android:radius="50dp"/>
-    <stroke android:width="2dp" android:color="#F41436"/>
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/black" />
+    <corners android:radius="50dp" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/black" />
 </shape>
