--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <LinearLayout
         android:layout_width="match_parent"
-
         android:layout_height="match_parent"
+        android:background="@drawable/background_gradient"
         android:orientation="vertical"
-        android:background="@drawable/header_bg"
         tools:context=".MainActivity">
 
         <TextView
@@ -17,16 +17,14 @@
             android:gravity="center"
             android:text="Double Talk"
             android:textColor="#222222"
-            android:textSize="30dp"
-            android:textStyle="bold|normal|italic" />
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="411dp"
-            android:layout_height="562dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="38dp"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="38dp"
             app:cardCornerRadius="25dp"
             app:cardElevation="10dp"
             app:cardUseCompatPadding="true">
@@ -44,7 +42,6 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
                     android:gravity="center"
-
                     android:orientation="horizontal"
                     android:weightSum="2">
 
@@ -52,29 +49,30 @@
                         android:id="@+id/signIn"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
-                        android:background="@drawable/switch_trcks"
-                        android:paddingLeft="40dp"
+                        android:background="@drawable/border"
+                        android:gravity="center"
                         android:paddingTop="5dp"
-                        android:paddingRight="15dp"
                         android:paddingBottom="5dp"
                         android:text="Log In"
-                        android:textColor="@color/yellow"
-                        android:textSize="24dp"
+                        android:textColor="@color/white"
+                        android:textSize="24sp"
                         android:textStyle="bold|normal" />
 
                     <TextView
                         android:id="@+id/signUp"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
                         android:layout_weight="1"
-                        android:paddingLeft="15dp"
+                        android:background="@drawable/border"
+                        android:gravity="center"
                         android:paddingTop="5dp"
-                        android:paddingRight="15dp"
                         android:paddingBottom="5dp"
                         android:text="Sign Up"
                         android:textAlignment="center"
-                        android:textColor="@color/yellow"
+                        android:textColor="@color/purple"
                         android:textSize="24dp"
                         android:textStyle="bold|normal" />
 
@@ -104,9 +102,9 @@
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/email"
-                            android:background="@drawable/edittext_bg"
                             android:layout_width="match_parent"
                             android:layout_height="120px"
+                            android:background="@drawable/edittext_bg"
                             android:ems="10"
                             android:inputType="textEmailAddress"
                             android:textSize="13dp" />
@@ -131,8 +129,8 @@
                             android:id="@+id/pasword"
                             android:layout_width="match_parent"
                             android:layout_height="120px"
-                            android:ems="10"
                             android:background="@drawable/edittext_bg"
+                            android:ems="10"
                             android:inputType="textPassword"
                             android:textSize="13dp" />
 
@@ -142,9 +140,9 @@
                         android:id="@+id/txtviewForgotPassword"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:text="Forgot Password ?"
-                        android:textColor="#F38B6B"
+                        android:layout_gravity="center"
+                        android:text="Forgot Password?"
+                        android:textColor="@color/purple"
                         android:textSize="11dp"
                         android:textStyle="normal" />
 
@@ -159,10 +157,9 @@
                         android:elevation="15dp"
                         android:text="Log In"
                         android:textAllCaps="false"
-                        android:textColor="@color/yellow"
+                        android:textColor="@color/white"
                         android:textSize="17sp"
                         app:shapeAppearanceOverlay="@style/Button5" />
-
 
                 </LinearLayout>
 
@@ -193,8 +190,8 @@
                             android:id="@+id/signupemail"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ems="10"
                             android:background="@drawable/edittext_bg"
+                            android:ems="10"
                             android:inputType="textEmailAddress"
                             android:textSize="13dp" />
 
@@ -218,8 +215,8 @@
                             android:id="@+id/signuppasword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ems="10"
                             android:background="@drawable/edittext_bg"
+                            android:ems="10"
                             android:inputType="textPassword"
                             android:textSize="13dp" />
 
@@ -243,8 +240,8 @@
                             android:id="@+id/signupretypepasword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ems="10"
                             android:background="@drawable/edittext_bg"
+                            android:ems="10"
                             android:inputType="textPassword"
                             android:textSize="13dp" />
 
@@ -256,60 +253,19 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="20dp"
+                        android:background="@drawable/button_bg"
                         android:backgroundTint="#F38B6B"
                         android:elevation="15dp"
                         android:text="Register"
-                        android:textColor="@color/yellow"
-                        android:background="@drawable/button_bg"
                         android:textAllCaps="false"
+                        android:textColor="@color/white"
                         android:textSize="17sp"
                         app:shapeAppearanceOverlay="@style/Button5" />
 
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:text="OR"
-                    android:textColor="@color/black"
-                    android:textSize="20dp" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_marginLeft="2dp"
-                        android:src="@drawable/ic_face" />
-
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_marginLeft="33dp"
-                        android:src="@drawable/ic_gg"
-                        app:shapeAppearanceOverlay="@style/circleImage"
-                        app:strokeColor="@color/white"
-                        app:strokeWidth="1dp" />
-
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
-                        android:layout_marginLeft="33dp"
-                        android:src="@drawable/ic_ig"
-                        app:shapeAppearanceOverlay="@style/circleImage"
-                        app:strokeColor="@color/white"
-                        app:strokeWidth="1dp" />
                 </LinearLayout>
 
             </LinearLayout>
+
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
