feature(Login) : update giao diện

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,6 +12,7 @@
             android:id="@+id/forgotpass_btnback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="BACK"
             android:layout_marginStart="10sp"
             android:background="@drawable/border"
@@ -26,6 +27,16 @@
             android:textColor="#4A6826"
             android:textSize="30sp"
             android:textStyle="bold|normal|italic" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edit_text"
+            android:text="Forgot PassWord"
+            android:layout_gravity="center"
+            android:textStyle="bold|normal|italic"
+            android:textSize="30dp"
+            />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -55,7 +66,7 @@
                     android:layout_marginRight="5dp"
                     android:layout_marginBottom="5dp"
                     android:hint="Email"
-                    app:boxStrokeColor="#E88262"
+                    app:boxStrokeColor="#9C27B0"
                     app:boxStrokeWidth="1dp"
                     app:shapeAppearanceOverlay="@style/Button4">
 
@@ -73,6 +84,7 @@
                     android:id="@+id/btnSend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/border"
                     android:text="Send" />
 
