--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,13 +16,13 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="Double Talk"
-            android:textColor="#222222"
+            android:textColor="#4A6826"
             android:textSize="30sp"
-            android:textStyle="bold" />
+            android:textStyle="bold|normal|italic" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             app:cardCornerRadius="25dp"
@@ -41,6 +41,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:weightSum="2">
@@ -56,7 +57,7 @@
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
                         android:text="Log In"
-                        android:textColor="@color/white"
+                        android:textColor="@color/purple"
                         android:textSize="24sp"
                         android:textStyle="bold|normal" />
 
@@ -72,7 +73,7 @@
                         android:paddingBottom="5dp"
                         android:text="Sign Up"
                         android:textAlignment="center"
-                        android:textColor="@color/purple"
+                        android:textColor="@color/white"
                         android:textSize="24dp"
                         android:textStyle="bold|normal" />
 
@@ -96,7 +97,7 @@
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
                         android:hint="Email"
-                        app:boxStrokeColor="#E88262"
+                        app:boxStrokeColor="#B437CA"
                         app:boxStrokeWidth="1dp"
                         app:shapeAppearanceOverlay="@style/Button4">
 
@@ -120,7 +121,7 @@
                         android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
                         android:hint="Password"
-                        app:boxStrokeColor="#E88262"
+                        app:boxStrokeColor="#B437CA"
                         app:boxStrokeWidth="1dp"
                         app:endIconMode="password_toggle"
                         app:shapeAppearanceOverlay="@style/Button4">
@@ -265,6 +266,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+
 
         </androidx.cardview.widget.CardView>
 
